--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,21 +2,20 @@ name: C/C++ CI
 
 on:
   push:
-    branches: "main"
+    branches: "test"
 
 jobs:
   build:
-
     runs-on: ubuntu-24.04
     container: devkitpro/devkitarm
 
     steps:
-    - uses: actions/checkout@v4
-    - name: make
-      run: make all
-    - name: Upload binary
-      uses: actions/upload-artifact@v4
-      with:
-        name: Build
-        path: |
-          N3DS_QTM_Disabled_HomeBrewApplication.3dsx
+      - uses: actions/checkout@v4
+      - name: make
+        run: make all
+      - name: Upload binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: Build
+          path: |
+            N3DS_QTM_Disabled_HomeBrewApplication.3dsx
