--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,9 +1,8 @@
 name: C/C++ CI
 
 on:
-  push:
-    branches: "s"
-
+  workflow_dispatch:
+  
 jobs:
   build:
     runs-on: ubuntu-24.04
@@ -16,6 +15,5 @@ jobs:
       - name: Upload binary
         uses: actions/upload-artifact@v4
         with:
-          name: Build
           path: |
             N3DS_QTM_Disabled_HomeBrewApplication.3dsx
